fix image cropping issue

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -39,6 +39,7 @@
   --color-18: #ff9b98;
   --color-19: #304149;
   --color-20: #2f3a52;
+  --color-21: #ffffff;
 
   --border-1: #2f3a52;
   --border-2: #d5d9d9;
@@ -62,6 +63,8 @@
   --color-non-active: var(--text-5);
   --color-error: var(--color-18);
   --color-input: var(--color-19);
+
+  --color-img: var(--color-21);
 
   --color-button-hover: var(--color-20);
   
